# mcp-devtools-server

./: .env.example  .gitignore  LICENSE  main.py  pyproject.toml
docs/: tool_specs.md
scripts/: test_deepseek.py
src/mcp_devtools/: config.py  server.py
src/mcp_devtools/llm/: deepseek.py
